<resources>
    <string name="app_name">photos</string>
    <string name="photo_feed_title">Photo Feed</string>
    <string name="unsplash_title">Unsplash</string>
    <string name="camera_title">Camera</string>

    <string name="error_message">Error</string>
    <string name="empty_message">Empty</string>
    <string name="empty_feed_message">Your photos will be here</string>
    <string name="photo_from_api_message">Get photo from unsplash</string>
    <string name="photo_from_gallery_message">Get photo from gallery</string>
    <string name="photo_from_camera_message">Make a new photo</string>
    <string name="edit_photo_title">Edit photo</string>
</resources>