<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/photoFeedFragment">

    <fragment
        android:id="@+id/photoFeedFragment"
        android:name="com.example.photos.ui.photo_feed.PhotoFeedFragment"
        android:label="@string/photo_feed_title"
        tools:layout="@layout/fragment_photo_feed">
        <action
            android:id="@+id/action_openSelectedPhoto"
            app:destination="@id/editPhotoFragment"/>
        <action
            android:id="@+id/action_photoFeedFragment_to_cameraFragment"
            app:destination="@id/cameraFragment" />
        <action
            android:id="@+id/action_photoFeedFragment_to_unsplashFragment"
            app:destination="@id/unsplashFragment" />
    </fragment>

    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.example.photos.ui.camera.CameraFragment"
        android:label="@string/camera_title"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_cameraFragment_to_editPhotoFragment"
            app:destination="@id/editPhotoFragment" />
    </fragment>

    <fragment
        android:id="@+id/unsplashFragment"
        android:name="com.example.photos.ui.dashboard.UnsplashPhotosFragment"
        android:label="@string/unsplash_title"
        tools:layout="@layout/fragment_unsplash_feed" >
        <action
            android:id="@+id/action_unsplashFragment_to_editPhotoFragment"
            app:destination="@id/editPhotoFragment" />
    </fragment>

    <fragment
        android:id="@+id/editPhotoFragment"
        android:name="com.example.photos.ui.edit_photo.EditPhotoFragment"
        android:label="@string/edit_photo_title"
        tools:layout="@layout/fragment_edit_photo">
        <argument
            android:name="selectedImageUri"
            app:argType="string" />
    </fragment>
</navigation>