<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_photo_feed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:spanCount="2"
        tools:listitem="@layout/photo_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/open_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_plus"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/make_new_photo_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/open_fab"
        app:layout_constraintEnd_toEndOf="@+id/open_fab"
        app:layout_constraintStart_toStartOf="@+id/open_fab"
        app:srcCompat="@drawable/ic_camera" />

    <TextView
        android:id="@+id/make_photo_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/photo_from_camera_message"
        app:layout_constraintBottom_toBottomOf="@+id/make_new_photo_fab"
        app:layout_constraintEnd_toStartOf="@+id/make_new_photo_fab"
        app:layout_constraintTop_toTopOf="@+id/make_new_photo_fab" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/actions_button_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="get_from_gallery_action_text, make_photo_action_text, get_from_unsplash_action_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/photo_from_gallery_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/make_new_photo_fab"
        app:layout_constraintEnd_toEndOf="@+id/make_new_photo_fab"
        app:layout_constraintStart_toStartOf="@+id/make_new_photo_fab"
        app:srcCompat="@drawable/ic_add_photo" />

    <TextView
        android:id="@+id/get_from_gallery_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/photo_from_gallery_message"
        app:layout_constraintBottom_toBottomOf="@+id/photo_from_gallery_fab"
        app:layout_constraintEnd_toStartOf="@+id/photo_from_gallery_fab"
        app:layout_constraintTop_toTopOf="@+id/photo_from_gallery_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/photo_from_unsplash_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/photo_from_gallery_fab"
        app:layout_constraintEnd_toEndOf="@+id/make_new_photo_fab"
        app:layout_constraintStart_toStartOf="@+id/make_new_photo_fab"
        app:srcCompat="@drawable/ic_add_photo" />

    <TextView
        android:id="@+id/get_from_unsplash_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/photo_from_api_message"
        app:layout_constraintBottom_toBottomOf="@+id/photo_from_unsplash_fab"
        app:layout_constraintEnd_toStartOf="@+id/photo_from_unsplash_fab"
        app:layout_constraintTop_toTopOf="@+id/photo_from_unsplash_fab" />

    <TextView
        android:id="@+id/error_feed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/photo_feed_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/empty_feed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_feed_message"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>